# MotionStation

./: Known Issues.txt  LabviewVTK.ocx  Motor Initialize and Send cmds.llb  Motor Initialize and Send cmds.vi  Motor Initialize.llb  Motor Initialize.vi  README.md  Spatial_Math.llb  datasktcore.llb  geometric x rot.vi  license.txt  motor control.vi  password  warnings.txt
Active Motion/: GHJ CoR for MotionStation.vi  Rotate scapular CS 30 Degs about X Axis.vi  drive link ticks to scapula angle.vi  example matrices.vi
Documents/: Elbow Motion Simulator brief desc.pptx  Medical Mechatronics Intro to Jinshan.pptx  Simulator Code Size Summary.txt
IGSTK/: test
IGSTK/VTK wrapper for LV - Source/: CMakeLists.txt  StdAfx.h  lvvtkwrap BeforeStuffHappened.cxx  lvvtkwrap.cxx  readme.txt
Kinematics Viewer/: Fix Flock Angle Shift.vi  digitized geometry.ctl
Motor Programs/: Motor 1 set address.sms  Motor 1 set address.smx  linkage travel and torq NEW no print STOP by Setting V=0.sms  linkage travel and torq NEW no print STOP by Setting V=0.smx  linkage travel and torq NEW no print.sms  linkage travel and torq NEW no print.smx  linkage travel and torq NEW.sms  linkage travel and torq NEW.smx  linkage travel and torq for Left specimens.sms  linkage travel and torq for Left specimens.smx  linkage travel and torq limit stop and hold using MV command.sms  linkage travel and torq limit stop and hold using MV command.smx  linkage travel and torq sept 10.sms  linkage travel and torq sept 10.smx  linkage travel and torq sept 12.sms  linkage travel and torq sept 12.smx  (+5 more)
demos/: func.js  (+24 more)
(+57329 files in other folders)
